# openinframap

./: .gitignore  Dockerfile  Dockerfile.prod  LICENSE  Makefile  README.md  about.html  base.mss  config.toml  data.py  docker-compose.yml  functions.sql  imposm3.Dockerfile  index.html  layers.yml  main.py  map.js  mapping.yml  microwave_hft.mss  nginx-site.conf  oim.mml  oim.style  oim.xml  package-lock.json  package.json  petroleum.mss  power.mml  power.mss  power_oapi_fr.mss  pyproject.toml  refresh_matviews.sql  sitemap.py  tegola.Dockerfile  telecoms.mml  telecoms.mss  template_functions.py  tilestache.json  util.py  views.sql  views_clean.sql  (+5 more)
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
EECS481_HW6/: pyvenv.cfg
docs/: architecture.md
imposm/: .coverage  Dockerfile  README.md  funcs.py  main.py  petroleum.py  power.py  telecoms.py  transformer_windings.py  water.py
imposm3/: README.md  clean-expire.sh  crontab  docker-entrypoint.sh  imposm3.conf  requirements.txt
josm/: power_fr.mss
js/: hash.js  map.js
mapping/: Dockerfile  funcs.py  main.py  petroleum.py  power.py  telecoms.py
osmosis/: configuration.txt  imposm3.conf  osm-update.service  osm-update.timer  update.sh
schema/: README.md  dev-init.sql  functions.sql  prod-init.sql  stats.sql  views.sql  views_clean.sql
scripts/: reload_db.sh
sprites/: power_pole.idraw
src/: build_sprites.js  index.css  index.html  index.js  infopopup.css  infopopup.js  (+10 more)
web-backend/: .gitignore  Dockerfile  README.md  charts.py  config.py  create_indexes.py  data.py  generate-stats.sql  location.sql  main.py  pyproject.toml  search.py  sitemap.py  template_functions.py  test_data.py  util.py  wikidata.py
web-backend/.github/workflows/: build-and-deploy.yml
web-backend/charts/: __init__.py  country.py  util.py
web-backend/src/: __init__.py  config.py  data.py  main.py  openapi.py  sitemap.py  template_functions.py  templates.py  util.py
web-backend/src/charts/: __init__.py  country.py  util.py
web-backend/src/templates/: _base.html  _tables.html  about.html  area.html  charts.html  index.html  plant_detail.html  plants_country.html
web-backend/src/views/: __init__.py  api.py  area.py  base.py  country.py  search.py  wikidata.py
web-backend/static/: main.css
web-backend/templates/: _base.html  _tables.html  about.html  area.html  charts.html  copyright.html  country.html  exports.html  index.html  plant_detail.html  plants_country.html
web-backend/views/: area.py  country.py  wikidata.py
(+573 files in other folders)
