[tool.poetry]
name = "oim-stats-server"
version = "0.1.0"
description = ""
authors = ["Russ Garrett <russ@garrett.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.13.8"
databases = "^0.4.0"
asyncpg = "^0.21.0"
aiofiles = "^0.5.0"
jinja2 = "^2.11.2"
uvicorn = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
