[project]
name = "oim-stats-server"
version = "0.1.0"
description = ""
requires-python = ">=3.13,<3.14"
dependencies = [
    "starlette",
    "databases",
    "asyncpg",
    "aiofiles",
    "jinja2",
    "uvicorn",
    "asgi-sitemaps",
    "aiohttp",
    "more-itertools",
    "async_lru",
]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F"]
ignore = []

[dependency-groups]
dev = ["mypy>=1.15.0", "ruff>=0.9.7"]
