[project]
name = "oim-stats-server"
version = "0.1.0"
description = ""
requires-python = ">=3.13,<3.14"
dependencies = [
    "starlette",
    "databases",
    "asyncpg",
    "aiofiles",
    "jinja2",
    "uvicorn",
    "asgi-sitemaps",
    "httpx",
    "more-itertools",
    "async_lru",
    "pandas>=2.2.3",
    "bokeh==3.9.1",
    "pycountry>=24.6.1",
    "sqlalchemy[asyncio]>=2.0.50",
    "pydantic>=2.13.4",
    "geojson>=3.3.0",
    "asgiref>=3.11.1",
    "shapely>=2.1.2",
]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F"]
ignore = []

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.30.2",
    "ipython>=9.0.2",
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.250308",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.9.7",
]
